[gd_scene load_steps=10 format=3 uid="uid://domhm87hbhbg1"]

[ext_resource type="Script" path="res://demo/src/Player.gd" id="1_nm1yx"]
[ext_resource type="Script" path="res://demo/src/CameraManager.gd" id="2_loos7"]
[ext_resource type="Texture2D" uid="uid://c1x355dlcqnm2" path="res://addons/Third Person Controller/Assets/Models/Characters/dingus_nowhiskers.jpg" id="3_2bwb4"]
[ext_resource type="ArrayMesh" uid="uid://rhwg3lm77fmq" path="res://addons/Third Person Controller/Assets/Models/Characters/maxwell.obj" id="3_s6ocl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_smq6u"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lwhhq"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_sgnwv"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_twc2s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fhlvp"]
albedo_texture = ExtResource("3_2bwb4")

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_nm1yx")

[node name="CameraManager" type="Node3D" parent="."]
script = ExtResource("2_loos7")

[node name="Arm" type="SpringArm3D" parent="CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 2.32515, -0.0321627)
shape = SubResource("SphereShape3D_smq6u")
spring_length = 6.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraManager/Arm"]
unique_name_in_owner = true
near = 0.25
far = 16384.0

[node name="CollisionShapeBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CapsuleShape3D_lwhhq")

[node name="Area3D" type="Area3D" parent="CollisionShapeBody"]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionShapeBody/Area3D"]
transform = Transform3D(3.666, 0, 0, 0, 2.65985, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_sgnwv")

[node name="CollisionShapeRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0)
shape = SubResource("SeparationRayShape3D_twc2s")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(0.000270348, 0, -0.00127924, 0, 0.00130749, 0, 0.00127924, 0, 0.000270348, 0, 0.0597401, 0)
material_override = SubResource("StandardMaterial3D_fhlvp")
mesh = ExtResource("3_s6ocl")
